2012-11-10 Zoran Vasiljevic <zv@archiware.com>

	* genric/threadCmd.c: fixed race condition on
	thread-local storage in ThreadCancel().

2012-11-10 Zoran Vasiljevic <zv@archiware.com>

	*** Merged "thread-2-7for84+" branch ***
	
2012-11-08  Don Porter  <dgp@users.sourceforge.net>

	* configure.in:		Bump to version 2.7.0
	* lib/ttrace.tcl:
	* win/pkg.vc:

2012-09-13 Zoran Vasiljevic <zv@archiware.com>

	*** 2.7b1 TAGGED FOR RELEASE (thread-2-7-b1) ***

	* doc/html/tpool.html
	* doc/man/tpool.n
	* doc/tpool.man: fixed "tpool::create -idletime" description
	[Tcl Bug 3534442]

	* generic/threadSpCmd.h
	* generic/threadSvCmd.h: removed some unused structure members
	[Tcl Feature Request 3563391]

2012-09-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* Makefile.in:       Use "::tcltest::loadTestedCommands" to make
	* tests/all.tcl:     sure that the right Thread version is tested,
	* tests/thread.test: without requiring explicit version numbers

2012-08-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/*.c:  Remove all (deprecated) usages of
	_ANSI_ARGS_ and TCL_PARSE_PART1
	* generic/threadSpCmd.c: Fix [Tcl Bug #3562640]: problem loading Thread
	* generic/threadSvCmd.c: in 8.5, when compiled for 8.6.
	* win/makefile.vc
	* Makefile.in

2012-07-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc: [Bug 3544932]: Visual studio compiler check fails

2012-07-05 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Fixed leaking callback data in ThreadSend()
	plus some minor cosmetic changes (tx to Gustaf Neumann).

2012-07-03 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: [Bugs 3534440, 3534581] fixed.
	Also, promoted jobId to be Tcl_WideInt (was uint).

2012-04-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/threadSpCmd.c:	Eliminate some tricky finalization
	problems by converting the SpBucket arrays from dynamic storage to
	static storage so they no longer need to be finalized.  Since they